ASUSFETest/src/objects/Previous_Education__c.object
<CustomObject>
    <description>Self-reported academic history from application</description>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Previous Education</relationshipLabel>
        <relationshipName>Previous_Education</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Degree_Type__c</fullName>
        <label>Degree Type</label>
        <picklist>
            <picklistValues>
                <fullName>Undergraduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Ed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Degree</label>
        <referenceTo>Degree_Name__c</referenceTo>
        <relationshipLabel>Previous Education</relationshipLabel>
        <relationshipName>Previous_Education</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Graduation_Date__c</fullName>
        <label>Graduation Date</label>
        <type>Date</type>
    </fields>
    <label>Previous Education</label>
    <listViews>
        <fullName>All_Previous_Education</fullName>
        <columns>Contact__c</columns>
        <columns>Degree_Type__c</columns>
        <columns>Degree__c</columns>
        <columns>Graduation_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Previous Education</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}-{000000}</displayFormat>
        <label>Previous Education Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Previous Education</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>